Changelog for GoodNews

- fixed waring message when mailing resource is in read-only mode
- fixed some PHP warnings if collections field of mailing_meta is empty (happens for resources prior to version 1.3.0-pl)
- [#33] Integrate functionality to auto-detect images and convert physical image dimensions based on src or style attributes
- fixed a problem in ContentCollection snippet when using tplWrapper
- removed ContentCollectionSnippet output if collection is empty


GoodNews 1.3.5-pl (2014-12-10)
--------------------------------------------------
- added ability to click on newsletter title to edit the newsletter
- added a switch above Newsletters grid to quickly activate/deactivate send-processes
- [#32] Add back an indicator for displaying if sending processes are activated/deactivated in settings
- fixed a problem in System settings when Admin or Editor group names have leading or trailing spaces
- fixed a bug with slider value displays in GoodNews - System settings
- [#30] added indicator in GoodNews - System Checks for requirement of PHP versions > 5.3.0
- fixed a bug in resource rendering (this was a tricky one!)


GoodNews 1.3.4-pl (2014-12-03)
--------------------------------------------------
- fixed a problem where Resource Collections aren't restored correctly from database
- added container filter dropdown in Resource Collections grid (better user experience)
- removed grouping by container in Resource Collections grid
- added PHP 5.3 (or later) requirement to readme.txt
- again fixed another small bug in how cron security keys are checked :)
- fixed a problem where Resource Collections are empty on first load (no Collections array available in mailing_meta)


GoodNews 1.3.3-pl (2014-11-16)
--------------------------------------------------
- fixed an issue with checkboxes causing text-parsing problems when using the "required" validator
- [#5] Render warning message to GoodNews forms if Snippets are mis-configured